December 25, 2006:

  - Keyboard controls can now be customized.

February 20, 2006: Released version 0.9.2 (also known as the "a month of
procrastination" release).

  - Fixed the -f and -d command line options.
  - Missiles are now larger and brighter than their orbit trail dots.
  - Alt+Enter now also toggles fullscreen mode.
  - Make it work in 15 and 16 bit per pixel modes (no aaline).
  - Possibly fix the MacOS X "invisible fix" problem I saw (use 2 x aaline
    instead of aalines).
  - Added a help screen.
  - Added an Options menu.
  - Added a New Game menu (the main menu was becoming too cluttered).
  - Added a pyspacewar.pyw script for the convenience of Windows users.

January 14, 2006: Released version 0.9.1 with some bug fixes and small
features:

  - Use pygame.font.SysFont to locate Verdana.ttf on your system.
  - Fix "surfaces must not be locked during blit" bug.
  - Fix some cosmetic unit test failures.
  - Added a background image.
  - Made debug timings HUDs less intrusive.
  - Added an ability to specify the desired video mode on the command line.
  - The thrusters are now drawn more accurately.

January 8, 2006: After a week of intensive work, I released version 0.9.0.
User-visible changes:

  - Added an in-game menu.
  - You can drag the viewport around with the mouse (use the right button).
  - Automatic zoom in.
  - Radars show planet sizes, not just positions.
  - Dead ships fade away.
  - Information panels have translucent backgrounds.
  - Added an icon.

Internal code changes.

  - Split the code into several modules in a package.
  - Refactored the code extensively, it is now much more flexible.
  - Added unit tests.
  - Added a distutils setup script.


January 1, 2006: After a very nice New Year's party, I started working on
PySpaceWar again.  I want to refactor the code into separate logic and graphics
parts, and add unit tests.  I want to add a proper in-game menu (start new