@@ -1,6 +1,9 @@
-December 25, 2006:
+December 25, 2006: The Christmas release.
 
   - Keyboard controls can now be customized.
+  - Keyboard controls and video mode options are stored in a config file.
+  - Added the -w command line option, in case you desire to override the config
+    file.
 
 February 20, 2006: Released version 0.9.2 (also known as the "a month of
 procrastination" release).
